--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@ width:100%; height: 49px; display: flex;}
 
 .footer{ width:90%; height: 100%; margin: 10px; }
 p{padding: 10px; }
+  
+.version{ width:90%; height: 40px; }
+   
+ header{ display: flex; height 60px; width:100%;}
+
+.logo{ padding: 15px; width:70px;}
+.log {height 60px; width:60px; text-align: center;}
+.log img{border:1px solid black; border-radius: 10px; height: 60px; width:60px;}
+
+.nombre{height 50px; width:100%;}
+.nombre p{font-size: 12px; }  
+  
 </style>
 </head>
 <body>
@@ -83,7 +95,7 @@ p{padding: 10px; }
 <section id="section1"><img src="1.png" width="110"  height="110">
 </section>
 
-<section id="section2"><center><h2 id="titulo">ForNoFap - English Community</h2></center>
+<section id="section2"><center><h2 id="titulo">ForNoFap  English Community</h2></center>
 </section>
 
 <section id="section3">
@@ -129,5 +141,45 @@ p{padding: 10px; }
 Thank you for believing and using the app. To support us: - Rate our app. - Send us comments and suggestions. - Thank you very much..
 </p>
 </div>
+  
+ <div class="version">
+<pre><h3>     Otras Versiones </h3>
+</pre>
+</div>
+  
+<header>
+<div class="logo">
+<div class="log">
+<a href="ForNoFap - English Community_v1.2.0Kun1_ID_developer shop.apk" download="ForNoFap  English Community v1.0.0Kun1 developer shop" ><img src="1.png" ></a>
+</div>
+</div>
+<div class="nombre">
+<pre><p>
+ForNoFap  English Community
+versión  1.2.0kun1(7)
+tamaño   16.25MB
+</p>
+</pre>
+</div>
+</header>
+  
+ <header>
+<div class="logo">
+<div class="log">
+<a href="ForNoFap - English Community_v1.0.0Kun1_developer-shop.apk" download="ForNoFap  English Community v1.0.0Kun1 developer shop" ><img src="1.png" ></a>
+</div>
+</div>
+<div class="nombre">
+<pre><p>
+ForNoFap  English Community
+versión  1.0.0kun1(5)
+tamaño   15.45MB
+</p>
+</pre>
+</div>
+</header>
+  
+  
+  
 </body>
 </html>
