--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ p{padding: 10px; }
 </div>
 
 <div class="nav"> 
-<a href="ForNoFap - English Community_v1.0.0Kun1_developer-shop.apk" download="ForNoFap - English Community_v1.0.0Kun1_developer-shop" ><center>Descargar</center></a>
+<a href="ForNoFap - Español Community_v1.2.0Kun1_ID_developer shop.apk" download="ForNoFap - Español Community_v1.2.0Kun1_ID_developer shop" ><center>Descargar</center></a>
 </div>
 <section id="section03">
 <div id="section08">
