--- a/index.html
+++ b/index.html
@@ -68,19 +68,22 @@ width:100%; height: 49px; display: flex;}
 #section6{ margin: 5px; border-radius: 10px;  display: flex;}
 #section6 video{ border: 1px solid black; border-radius: 10px; height: 200px; width: 130px;  display: flex;}
 
-.footer{ width:90%; height: 100%; margin: 10px; }
+.footer{ width:90%; height: 100%; margin: 5px;  }
 p{padding: 10px; }
   
 .version{ width:90%; height: 40px; }
    
- header{ display: flex; height 60px; width:100%;}
+ 
 
-.logo{ padding: 15px; width:70px;}
-.log {height 60px; width:60px; text-align: center;}
-.log img{border:1px solid black; border-radius: 10px; height: 60px; width:60px;}
+header1{display: flex; width:100%;}
 
-.nombre{height 50px; width:100%;}
-.nombre p{font-size: 12px; }  
+.logo{ padding: 15px; width:10px;}
+.log { height 30px; width:30px; }
+.log img{  height: 30px; width:30px;}
+
+
+.nombre{ padding: 20px; height 30px; width:100%;}
+.nombre p{font-size: 12px; }
   
 </style>
 </head>
@@ -141,6 +144,47 @@ p{padding: 10px; }
 Thank you for believing and using the app. To support us: - Rate our app. - Send us comments and suggestions. - Thank you very much..
 </p>
 </div>
+  
+
+
+<div class="footer">
+<p>
+<h4>Datos del desarrollador</h4>
+</div>
+
+<header1>
+<div class="logo">
+<div class="log">
+<img src=" desarrollador.png" >
+</div>
+</div>
+<div class="nombre">
+ Doskun
+</div>
+</header1>
+
+<header1>
+<div class="logo">
+<div class="log">
+<a href="doskun.apps@gmail.com"><img src="email.png" ></a>
+</div>
+</div>
+<div class="nombre">
+doskun.apps@gmail.com
+</div>
+</header1>
+
+<header1>
+<div class="logo">
+<div class="log">
+<a href="http://www.e-droid.net/privacy.php?ida=2133632&idl=en"><img src="111.png " ></a>
+</div>
+</div>
+<div class="nombre">
+Polotica de privacidad 
+</div>
+</header1>  
+  
   
  <div class="version">
 <pre><h3>     Otras Versiones </h3>
