--- a/index.html
+++ b/index.html
@@ -77,13 +77,23 @@ p{padding: 10px; }
 
 header1{display: flex; width:100%;}
 
-.logo{ padding: 15px; width:10px;}
-.log { height 30px; width:30px; }
-.log img{  height: 30px; width:30px;}
+.logo1{ padding: 15px; width:10px;}
+.log1 { height 30px; width:30px; }
+.log1 img{  height: 30px; width:30px;}
 
 
-.nombre{ padding: 20px; height 30px; width:100%;}
+.nombre1{ padding: 20px; height 30px; width:100%;}
+.nombre1 p{font-size: 12px; }
+  
+  header{ display: flex; height 60px; width:100%;}
+
+.logo{ padding: 15px; width:70px;}
+.log {height 60px; width:60px; text-align: center;}
+.log img{border:1px solid black; border-radius: 10px; height: 60px; width:60px;}
+
+.nombre{height 50px; width:100%;}
 .nombre p{font-size: 12px; }
+
   
 </style>
 </head>
@@ -153,34 +163,34 @@ Thank you for believing and using the app. To support us: - Rate our app. - Send
 </div>
 
 <header1>
-<div class="logo">
-<div class="log">
+<div class="logo1">
+<div class="log1">
 <img src=" desarrollador.png" >
 </div>
 </div>
-<div class="nombre">
+<div class="nombre1">
  Doskun
 </div>
 </header1>
 
 <header1>
-<div class="logo">
-<div class="log">
-<a href="doskun.apps@gmail.com"><img src="email.png" ></a>
+<div class="logo1">
+<div class="log1">
+<img src="email.png" >
 </div>
 </div>
-<div class="nombre">
+<div class="nombre1">
 doskun.apps@gmail.com
 </div>
 </header1>
 
 <header1>
-<div class="logo">
-<div class="log">
+<div class="logo1">
+<div class="log1">
 <a href="http://www.e-droid.net/privacy.php?ida=2133632&idl=en"><img src="111.png " ></a>
 </div>
 </div>
-<div class="nombre">
+<div class="nombre1">
 Polotica de privacidad 
 </div>
 </header1>  
