--- a/index.html
+++ b/index.html
@@ -130,6 +130,38 @@ header1{display: flex; width:100%;}
 </div>
 <div id="section05"><a href="comentarios.html" ><center>Comentarios</center></a> 
 </div>
+ <script type="text/javascript">(function(d, t, e, m){
+    window._rws = window._rws || [{
+        huid: "489636",
+        uid: "5b4004c165e23233b1355674625abdce",
+        source: "addthis",
+        options: {
+            "advanced": {
+                "layout": {},
+                "font": {}
+            },
+            "size": "",
+            "style": "oxygen",
+            "isDummy": false
+        } 
+    }];
+
+        
+    // Append Rating-Widget JavaScript library.
+    var rw, s = d.getElementsByTagName(e)[0], id = "rw-addthis-js",
+        p = d.location.protocol, a = ("https:" == p ? "secure." + 
+        m + "js/platform/" : "js." + m + "platform/"), 
+        ck = "Y" + t.getFullYear() + "M" + t.getMonth() + "D" + t.getDate();
+    if (d.getElementById(id)) return;              
+    rw = d.createElement(e);
+    rw.id = id; rw.async = true; rw.type = "text/javascript";
+    rw.src = p + "//" + a + "addthis.js?ck=" + ck;
+    s.parentNode.insertBefore(rw, s);
+}(document, new Date(), "script", "rating-widget.com/"));</script> 
+  
+  
+  
+  
 </section>
 <div class="main">
 <section id="section6">
