--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ header1{display: flex; width:100%;}
 <section id="section03">
 <div id="section08">
 </div>
-<div id="section04"><b>Calificación:</b><br>4.0<img src="19[1].png">
+<b>Calificación:</b><br><div class="rw-ui-container"></div>
 </div>
 <div id="section05"><a href="comentarios.html" ><center>Comentarios</center></a> 
 </div>
